--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
-    <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="../node_modules/flatpickr/dist/flatpickr.min.css">
+    <!-- <link rel="stylesheet" href="node_modules/flatpickr/dist/flatpickr.min.css"> -->
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
@@ -31,7 +32,7 @@
         <span class="label">Seconds</span>
       </div>
     </div>
-    <script src="node_modules/flatpickr/dist/flatpickr.min.js"></script>
+    <script src="../node_modules/flatpickr/dist/flatpickr.min.js"></script>
     <script src="js/02-timer.js" type="module"></script>
   </body>
 </html>
