--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -12,7 +12,7 @@
   <p><a href="index.html">Go back</a></p>
   <div class="buttons">
     <button type="button" data-start>Start</button>
-    <button type="button" data-stop>Stop</button>
+    <button type="button" data-stop disabled>Stop</button>
   </div>
 
 
