--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -15,7 +15,7 @@
 
   <div class="start">
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button" data-start disabled>Start</button>
   </div>
   <div class="timer">
     <div class="field">
